Let it build with JDK11 on Windows